--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3"
 services:
   crud_app:
     container_name: crud_app
+    image: jayrajmalamdi/crud_app:latest
     build:
       context: .
       dockerfile: ./Dockerfile
@@ -11,6 +12,8 @@ services:
       - ConnectionStrings_DefaultConnection="Host=db;Database=postgres;Username=postgres;Password=postgres"
     networks:
       - dotnet-api-pipeline-main
+    depends_on:
+      - db
 
   db:
     container_name: db
